# q3mod

./: Cargo.toml  gamedata.ini  license.txt  readme.md
examples/: gamedata.rs  q3mod-linux.rs  q3mod-win32.rs
src/: api.rs  chefs.rs  config.rs  data.rs  interface.rs  lib.rs  offsets.rs  process.rs  sdk.rs  settingsui.json  state.rs
src/base/: math.rs  mod.rs  solver.rs
src/chefs/: aimbot.rs  debugger.rs  esp.rs  trainer.rs  wallhack.rs
src/offsets/: cnq3-x64-unknown.ini  quake3e.x64-b62dc17a.ini  quake3e.x64-ba29947b.ini  quake3e.x64-unknown.ini
src/sdk/: entity_state.rs  player_state.rs  snapshot.rs
src/state/: client.rs  entities.rs  models.rs  refdef.rs  refents.rs  snapshot.rs  weapon.rs
